master

0.11beta
- Mayhem
  Removed the obnoxious 4chan Pass ad in captcha errors when posting.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.
- Zixaphir
  New Options:
  - Sidebar Location
    * Move the sidebar to the other side of the window!
  - Reply Padding:
    * Add or remove padding of the reply content!
  - Icon Orientation
    * Set the icons to horizontal or vertical.
  New options for board logo and banner positions, sidebar width, and margin sizes.
  Silhouettes are back and now switch between dark and light versions on-the-fly.
  Fixed the Spoiler Image checkbox.

0.10.5beta
- Zixaphir
  Fix Settings button and broken mascot code causing appchan-x to fail to load
    styles properly.

0.10.2beta
- Zixaphir
  Bug fixes.

0.9.9beta
- Zixaphir
  Custome Navigation

0.9.8beta
- Zixaphir
  Fix post form tabbed slideout on everything that isn't Gecko-based.
  

0.9.6beta
- Mayhem
  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).
- Zixaphir
  Trying to step it up on the interface.
  Theme customization interface no longer closes on save.

0.9.5beta
- Zixaphir
  Theme importing from 4chan SS and Oneechan.
    ( As 4chan SS is significantly different than Appchan X compared to Oneechan, )
    ( 4chan SS themes may import weirdly. Any themes using custom CSS that depend )
    ( on color variables from either will not work properly.                      )
  Themes and Mascots are now automatically alphabetized.

0.9.4beta
- Zixaphir
  Slightly snazzier interface.
  Block blocked ads warning.

0.9.3beta
- Zixaphir
  Removed Quote Threading.
  -- I didn't want to, but it's broken and I can't fix it right now.
     Might bring them back when I can.
  Removed "Always Sage on /jp/".
  -- I don't care about this board, but "always sage" just for a board is stupid.
  New Option: Remember Sage.
  -- My concession.
- Mayhem