@@ -1,4 +1,6 @@
 master
+- Zixaphir
+  Linkification (based off of Mayhem's LinkifyPlusfork)
 
 0.11beta
 - Mayhem
